svc.yml
apiVersion: v1
kind: Service
metadata:
  name: myservice
spec:
  selector:
    app: myapp
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
